--- a/src/components/SearchDetailCard/SearchDetailCard.css
+++ b/src/components/SearchDetailCard/SearchDetailCard.css
@@ -1,40 +1,41 @@
 .search-card {
-  width: 80%;
-  margin-top: 16px;
-  align-self: center;
+    width: 80%;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    align-self: center;
 }
 
 @media (max-width: 644px) {
-  .search-card {
-    width: 100%;
-    margin-top: 16px;
-  }
+    .search-card {
+        width: 100%;
+        margin-top: 16px;
+    }
 }
 
 @media (max-width: 714px) {
-  .search-card {
-    width: calc(100% - 32px);
-    margin-top: 16px;
-  }
+    .search-card {
+        width: calc(100% - 32px);
+        margin-top: 16px;
+    }
 }
 
 @media (max-width: 562px) {
-  .search-card-detail {
-    flex-direction: column !important;
-  }
-  .media-img {
-    width: 100% !important;
-  }
+    .search-card-detail {
+        flex-direction: column !important;
+    }
+    .media-img {
+        width: 100% !important;
+    }
 }
 
 @media (max-width: 820px) {
-  .smallHeadline {
-    font-size: 20px !important;
-  }
+    .smallHeadline {
+        font-size: 20px !important;
+    }
 }
 
 @media (max-width: 820px) {
-  .smallHeadline {
-    font-size: 20px !important;
-  }
+    .smallHeadline {
+        font-size: 20px !important;
+    }
 }
